get the animal hospital api

--- a/WebContent/O3618/o3618.html
+++ b/WebContent/O3618/o3618.html
@@ -5,26 +5,156 @@
 	<link rel="stylesheet" href="o3618.css" type="text/css">
     <meta charset="utf-8">
     <title>반려인을 위한</title>
+    <!-- include js and css link -->
+	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css" />
+	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+	<script	src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
+	<!-- end of including -->
 	<style>
-	
+		#sc_animal_hospital{
+			text-align:center;
+		}
+		.animal_hospital_row{
+			text-align :center;
+		}
+		
+		.animal_hospital_item{
+			width : 18%;
+			display:inline-block;
+			text-align :center;
+			margin:1.5%;
+			padding:20px 0px;
+			background-color:white;
+			box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+		}
+		.img_hospital_page{
+			width:50px;
+			height:50px;
+		}
+		#sc_animal_content{
+			width:85%;
+			display:inline-block;
+		}
+		#sc_animal_prev, #sc_animal_next{
+			width:5%;
+			display:inline-block;
+		}
 	</style>
 </head>
 <body>
 <section id="sc_content">
 	<section id="sc_title"><span id="point_title">반려견</span>을 키우는 당신을 위한 정보들</section>
+	<section id="sc_animal_hospital">
+		<div id="sc_animal_prev" onclick="prevPageList()">
+			<img class="img_hospital_page"src="image/left-arrow.svg" />
+		</div>
+		<div id="sc_animal_content">
+		
+		
+		
+				<div class="animal_hospital_row">
+			<div class="animal_hospital_item">
+				<h1>대학로동물병원</h1>
+				<div class="animal_hospital_item_content">
+					<h4>3672-8441</h4>
+					<h4>53.7</h4>
+				</div>
+			</div>
+			<div class="animal_hospital_item">
+				<h1>대학로동물병원</h1>
+			
+				<div class="animal_hospital_item_content">
+					<h4>3672-8441</h4>
+					<h4>53.7</h4>
+				</div>
+			</div>
+			<div class="animal_hospital_item">
+				<h1>대학로동물병원</h1>
+			
+				<div class="animal_hospital_item_content">
+					<h4>3672-8441</h4>
+					<h4>53.7</h4>
+				</div>
+			</div>
+			<div class="animal_hospital_item">
+				<h1>대학로동물병원</h1>
+			
+				<div class="animal_hospital_item_content">
+					<h4>3672-8441</h4>
+					<h4>53.7</h4>
+				</div>
+			</div>
+		</div>
+		
+		<div class="animal_hospital_row">
+			<div class="animal_hospital_item">
+				<h1>대학로동물병원</h1>
+				<div class="animal_hospital_item_content">
+					<h4>3672-8441</h4>
+					<h4>53.7</h4>
+				</div>
+			</div>
+			<div class="animal_hospital_item">
+				<h1>대학로동물병원</h1>
+			
+				<div class="animal_hospital_item_content">
+					<h4>3672-8441</h4>
+					<h4>53.7</h4>
+				</div>
+			</div>
+			<div class="animal_hospital_item">
+				<h1>대학로동물병원</h1>
+			
+				<div class="animal_hospital_item_content">
+					<h4>3672-8441</h4>
+					<h4>53.7</h4>
+				</div>
+			</div>
+			<div class="animal_hospital_item">
+				<h1>대학로동물병원</h1>
+			
+				<div class="animal_hospital_item_content">
+					<h4>3672-8441</h4>
+					<h4>53.7</h4>
+				</div>
+			</div>
+		</div>
+		
+		
+		
+		
+		
+		</div>
+		<div id="sc_animal_next" onclick="nextPageList()">
+			<img class="img_hospital_page" src="image/right-arrow.svg" />
+		</div>
+
+		
+	</section>
 	<section id="sc_suggest_walk_course">
 		<p id="p_walk_sub_title">주인님! 저랑 산책가실래요? U ´ᴥ` U</p>
 		<div id="map"></div>
+		
+		<div id="concertDiv"></div>
 	</section>
 </section>
 
 
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=b7795f74fa7c5e69cf79685b3479bcd2"></script>
 <script>
+	/* global variable */
+	var url ="";
+	var g_hospital_list = [];
+	var g_hospital_start_index = 0;
+	/* end of global variable */
+	
 	window.onload=init;
-
+	
 	function init() {
 		handleRefresh();
+		
 	}
 
 	// [about map]
@@ -39,13 +169,96 @@
 	// [end of map]
 	
 	// [about animal hospital api]
-	function updateURL() {
-		url="http://openapi.seoul.go.kr:8088/4b4b67704d6462663132306c47655155/xml/SeoulAnimalHospital/1/5/";
-		$.getJSON(url, SearchConcert);
+	function updateURL(start, end) {
+		url="http://openapi.seoul.go.kr:8088/4b4b67704d6462663132306c47655155/json/SeoulAnimalHospital/"+start+"/"+end+"/";
+		/*
+		$.getJSON(url, function(json){
+			alert("success-getAnimalHospital")
+		});
+		*/
+	
+		$.ajax({
+            type: "GET",
+            async: true,
+            url: url,
+            dataType: "json",
+            success: function(response, status, result) {
+				var response = JSON.parse(JSON.stringify(response));
+                var SeoulAnimalHospital = JSON.parse(JSON.stringify(response.SeoulAnimalHospital));
+                var hospital_list = JSON.parse(JSON.stringify(SeoulAnimalHospital.row));
+                var count = 0;     
+                for(var i = 0; i<hospital_list.length; i++){
+                	
+                	if(hospital_list[i].TRD_STATE_GBN == "0000"){
+                		g_hospital_list[count] = hospital_list[i];
+                		count ++;
+						//전화번호 : hospital_list[i].SITE_TEL
+						//건물 면적 : hospital_list[i].SITE_AREA
+                	}
+                }
+                alert(count);
+  			              
+                nextPageList();
+            },
+            error: function(xhr, status, error) {
+                var errorMessage = xhr.status + ': ' + xhr.statusText
+                alert('Error - ' + errorMessage);
+            }
+        });
+		
 	}
+	
+	function nextPageList(){
+		//alert("next! :"+ g_hospital_start_index);
+		
+		if(g_hospital_start_index >= g_hospital_list.length){
+			alert("마지막 페이지 입니다.");
+			return;
+		}
+		
+		$("#sc_animal_content").empty();
+		$("#sc_animal_content").append("<div class='animal_hospital_row'>");
+		
+		while(true){
+			// innerHTML
+			$("#sc_animal_content").append("<div class='animal_hospital_item'><h1>"+ g_hospital_list[g_hospital_start_index].WRKP_NM +"</h1>"
+					+"<div class='animal_hospital_item_content'>"
+					+"<h4>"+g_hospital_list[g_hospital_start_index].SITE_TEL+"</h4><h4>"+g_hospital_list[g_hospital_start_index].SITE_AREA +"</h4>"
+					+"</div></div>");
+			g_hospital_start_index++;
+			
+			if(g_hospital_start_index == g_hospital_list.length){
+				break;
+			}
+			
+			if(g_hospital_start_index%4 == 0){
+				$("#sc_animal_content").append("</div><div class='animal_hospital_row'>");
+				$("#sc_animal_content").append("<br/>");
+			}
+			
+			if(g_hospital_start_index%8 == 0){
+				$("#sc_animal_content").append("</div>");
+				break;
+			}
+			
+		}
+		
+	}
+	function prevPageList(){
+		//alert("hi! :"+ g_hospital_start_index);
+		
+		if(g_hospital_start_index <= 8){
+			alert("첫번째 페이지 입니다.");
+			return;
+		}else{
+			g_hospital_start_index -= 16;
+			nextPageList();
+		}
+	}
+	
 	// [end of animal hospital api]
 	function handleRefresh() {
-		updateURL();	//주소 업데이트
+		updateURL(1, 100);	//주소 업데이트
 		var newScriptElement = document.createElement("script");
 		newScriptElement.setAttribute("src",url);
 		newScriptElement.setAttribute("id","jsonp");
@@ -57,6 +270,7 @@
 		else {
 			head.replaceChild(newScriptElement, oldScriptElement);
 		}
+		
 	}
 
 </script>
