done [selling pet section]

--- a/WebContent/O3618/o3618.html
+++ b/WebContent/O3618/o3618.html
@@ -27,7 +27,7 @@
 	<!-- TODO -->
 	<section id="sc_selling_pet">
 		<p class="p_sub_title">주인님을 기다리고 있어요! U ´ᴥ` U</p>
-		<select id="district" style="z-index:4;font-family:dotum; font-size:0.7em; vertical-align:middle; margin-top:5px;">
+		<select id="selling_district" style="z-index:4;font-family:dotum; font-size:0.7em; vertical-align:middle; margin-top:5px;">
 			<option value="강남구">강남구</option>
 			<option value="강동구">강동구</option>
 			<option value="강북구">강북구</option>
@@ -54,9 +54,20 @@
 			<option value="중구">중구</option>
 			<option value="중랑구">중랑구</option>
  		</select>
+ 		
  		<section id="sc_selling_content">
-			<p class="loading"> Loading ..</p>
- 		</section>
+			
+			<section class="sc_selling_row">
+				<div class="store_name_title">가게 이름</div>
+				<div class="store_address_title">전체 주소</div>
+				<div class="store_address_title">도로명 주소</div>
+			</section>
+			<section id="sc_selling_list">
+				<p class="loading"> Loading ..</p>
+			</section>
+			
+			
+		</section>
 	</section>
 	<!-- -->
 	
